Update 'o7iuzdxnv-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe:a8eccddb76a5c5ec186b4a75b7eddc89fb0941c3@sha256:c1de50f11d84c22d5de350189e902afc56f4c343171f26df59f8260783d3c0ed

--- a/components/o7iuzdxnv-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/o7iuzdxnv-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: o7iuzdxnv-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:a8eccddb76a5c5ec186b4a75b7eddc89fb0941c3@sha256:c1de50f11d84c22d5de350189e902afc56f4c343171f26df59f8260783d3c0ed
+          name: container-image
